@startuml

hide empty members

package social {

package action {

class Action {
  int calculateUtility(Context context)
  List<UtilityRule> getTriggeredRules(Context context)
  Update execute(Context context)
}

enum Role {
  SPEAKER
  TARGET
  OBSERVER
}

class Context {
  Action action
  Map<Role,Character> roles
}

class Update {
  Map<CharacterId,Character> updatedCharacters
}

}

package character.relationship {

class RelationshipManager

}

package utils {

package effect {

interface Effect {
  Update applyTo(Update update)
}

}

package utility {

class UtilityRuleSet

}

}

}

Action *-up- UtilityRuleSet
Action "1" *-up- "*" Effect
Action -[hidden]- Update

Context -- Role
Context *-up- UtilityRuleSet
Context *-- Action
Context *-up- RelationshipManager


@enduml